@@ -114,6 +114,7 @@ The rules for this file:
   * deprecate lib.distances.applyPBC in favour of apply_PBC (Issue #389)
 
   Fixes
+  * Fixed PDB Parser and Reader requiring occupancy field (Issue #396)
   * Amber TRJ and NCDF Reader & Writers now use 'dt' instead of 'delta'
     to refer to time elapsed between timesteps. (Issue #350 and #206)
   * Fixed TPRParser considering LJ 1..4 exclusions as bonds (Issue #351)
